# ECHO

./: .env.example  .gitignore  AI Instructions.txt  Dockerfile  ECHO.bat  ECHO_CONTEXT_PROMPT.md  ECHO_start.py  EDIT_BUTTON_TROUBLESHOOTING.md  OVERALL CONCEPT - CORE COMPONENTS.md  PHASE 1 – PROJECT STRUCTURE.md  PHASE 2 — MEMORY-FIRST ARCHITECT.txt  PHASE 3A — CODE SPECIALIST.txt  PHASE 3B — ADVANCED MEMORY SYSTEM.txt  PHASE 3C — TOOLS & AGENT LOOPS.txt  PHASE 3D — OUTPUT SYNTHESIS + SELF-REFLECTION.txt  QUICK_START.md  README.md  SILENT_ECHO.bat  build_exe.py  chat.py  docker-compose.yml  gui_app.py  index.html  launch_echo.bat  launch_echo_react.bat  package-lock.json  package.json  pyproject.toml  restart_frontend.bat  setup_all.bat  silent_launch.vbs  start_frontend.bat  test_ddg.py  test_echo.py  test_payload.json  test_precision.py  test_v2_api.py  test_weather_tool.py  verify_accuracy.py  verify_integration.py  (+3 more)
ai-orchestrator/: .env  README.md  install-cpu.bat  install-cuda.bat  main.py  requirements-cpu.txt  requirements-cuda.txt  requirements-other.txt  requirements.txt  run.bat  setup-venv.bat  test_echo_tools.py  test_swarm_echo.py  verify_dev_runtime.py
ai-ui/: package-lock.json  package.json
api/: server.py
backend/: chess_manager.py  code_interpreter.py  config.py  emotion_detector.py  emotional_assistant.py  llm_client.py  main.py  memory.py  memory_system.py  nlp_service.py  requirements.txt  research_agent.py  search_orchestrator.py  start.bat  tools.py  vision_service.py  weather_tool.py  web_scraper.py
frontend/: VERIFY_EDIT_BUTTON.html  (+3 more)
(+781 files in other folders)
