[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "echo-ai"
version         = "4.0.0"
description     = "ECHO — Local Modular AI Assistant"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "psutil>=5.9",
]

[project.optional-dependencies]
rag     = ["chromadb>=0.5", "sentence-transformers>=2.7"]
web     = ["duckduckgo-search>=6.0"]
crypto  = ["cryptography>=42.0"]
dev     = ["pytest>=8.0", "httpx>=0.27", "pytest-anyio"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
